2007-11-04  Graham Cobb  <g+770@cobb.uk.net>

	* debian/rules (DEB_CONFIGURE_USER_FLAGS): use --enable-gpe

	* configure.ac, src/Makefile.am, src/main.c: build and compile
	changes for new hildon libraries in chinook

2007-07-23  Graham Cobb  <g+770@cobb.uk.net>

	* mkinstalldirs: add file

	* debian/rules: add options for maemo builds
	(this assumes the debian directory is not used for anything else)

2007-06-07  Florian Boor  <florian@linuxtogo.org>

	* Release 0.2
	* Rename configure.in to configure.ac like in all other bits.
	* Update i18n support in build tools to work with desktop file 
        and to pass distcheck.
	* refresh POTFILES.in

2007-02-25  Neal H. Walfield  <neal@gnu.org>

	* src/playlist.c (meta_data_reader): If possible, just set to
	GST_STATE_PAUSED to get the stream tags.  Break out of the loop
	once we reach our target state.

	(play_list_add_recursive): More aggressively yield.  Don't
	consider m3u files.

	* src/main.c (playlist_state_changed_cb): Simplify.
	(main): Call the quite menu item "Quit", not close.  Make the
	label containing the currently playing song ellipsizable.

2007-02-24  Neal H. Walfield  <neal@gnu.org>

	* src/main.c (playlist_add_cb): Use a file chooser.  Take an
	additional argument to determine whether to choose a file or a
	directory.
	(playlist_add_file_cb): New function.
	(playlist_add_directory_cb): New function.
	(main): Don't provide just an import menu item.  Provide both
	import file and an import directory items.
	[IS_HILDON]: Don't display a file menu.  Just add the menu items
	to the main menu.
	* src/starling.h: Remove field fs.

2007-02-23  Neal H. Walfield  <neal@gnu.org>

	* src/main.c: Include
	<hildon-fm/hildon-widgets/hildon-file-chooser-dialog.h>.
	(fs_cancel_cb): Remove function.
	(fs_accept_cb): Remove function.  Move body from here...
	(playlist_add_cb): ... to here.  Port to Maemo.

	(key_press_event) [IS_HILDON]: Make fullscreen button a play/pause
	button.  Map F8 to previous.
