@@ -1,3 +1,7 @@
+2007-11-06  Graham Cobb  <g+770@cobb.uk.net>
+
+	* src/main.c (main): changes for hildonprogram/hildonwindow in chinook
+
 2007-11-04  Graham Cobb  <g+770@cobb.uk.net>
 
 	* debian/rules (DEB_CONFIGURE_USER_FLAGS): use --enable-gpe
